test/fail/UselessPrivateImportAs.agda
module UselessPrivateImportAs where

private
  import Common.Prelude as P
